[gd_scene load_steps=10 format=2]

[ext_resource path="res://Interactables/Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Interactables/Enemy/EnemyAI.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.705882, 0.0156863, 0, 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )
radius = 0.5

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0.94902, 0.2, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 0.5, 0.5, 0.2 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.5, 0.5, 1 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.4, 1, 0.4 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1, 1, 3.48845 )

[node name="Enemy" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
script = ExtResource( 1 )
health = 3

[node name="Model" type="Spatial" parent="."]

[node name="Body" type="MeshInstance" parent="Model"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Visor" type="MeshInstance" parent="Model"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, -0.35 )
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 5 )
__meta__ = {
"_editor_description_": "Enemy"
}

[node name="InteractableCollider" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="InteractableCollider"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="InvulnTimer" type="Timer" parent="."]
one_shot = true

[node name="KnockbackTween" type="Tween" parent="."]

[node name="EnemyAI" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="followTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="VisionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="VisionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0958, -3.65008 )
shape = SubResource( 7 )

[connection signal="body_entered" from="InteractableCollider" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="InvulnTimer" to="." method="_on_InvulnTimer_timeout"]
[connection signal="timeout" from="followTimer" to="EnemyAI" method="_on_Timer_timeout"]
[connection signal="body_entered" from="VisionArea" to="EnemyAI" method="_on_VisionArea_body_entered"]
